syntax = "proto3";

// grpc service
// cmd: protoc --go_out=plugins=grpc:. inf.proto
// cd ../
// cp common/inf.pb.go helloworld/
// go install

package helloworld;

// The greeting service definition.
// service
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 ua = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32  code = 2;
}

//error ua
message ErrorUa{
    int32 code = 1;
    string message = 2;
}

//enum type default is int32
enum Ua{
    Unkown = 0;
    Web = 1;
    H5  = 2;
    Ios = 3;
    Android =4;
    Pc = 5;
    Wx = 6;
}
